# quote-bot

./: Dockerfile  README.md  bot.json  bot.py  docker-compose.yaml  ez_restart.php  pyproject.toml  requirements.txt
quote-bot/: bot.py
