[project]
name = "quote-bot"
version = "0.1.0"
description = "Whose Quote Is It Anyway? Bot. A fun guessing game for Discord quote channels"
authors = [
    {name = "pure-life-git"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "siegeapi (>=6.3.5,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "py-cord (>=2.6.1,<3.0.0)",
    "audioop-lts (>=0.2.1,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
